# n10p_lidar

./: .gitignore  .gitmodules  README.md  README2.md  TROUBLESHOOTING.md  test_action_server.py  test_gripper_control.py
Docs/: Quick_Start.md
backup/lidar_processing/: CMakeLists.txt  package.xml
backup/lidar_processing/src/: lidar_processor.cpp
backup/sim/: CMakeLists.txt  package.xml
backup/sim/config/: ekf.yaml  pcl_detection.rviz  slam_toolbox_params.yaml
backup/sim/launch/: gazebo_sim.launch.py  navigation.launch.py  object_positioning.launch.py
backup/sim/scripts/: lidar_control.py
backup/sim/src/: lidar_app_node.cpp  lidar_pointcloud_processor.cpp
docs/: COMPREHENSIVE_COMPARISON.md  PARAMETER_TUNING_GUIDE.md  Quick_Start.md  Quick_Start_en.md  README.md  README_en.md  TECHNICAL_DEEP_DIVE.md  TROUBLESHOOTING.md  test_pole_sim.py
src/: simple_visualizer.py
src/Lslidar_ROS2_driver/lslidar_driver/launch/: lslidar_launch.py
src/Lslidar_ROS2_driver/lslidar_driver/params/: lsx10.yaml
src/Lslidar_ROS2_driver/lslidar_driver/src/: lsiosr.cpp  lslidar_driver.cc
src/Lslidar_ROS2_driver/lslidar_msgs/: CMakeLists.txt  package.xml
src/Lslidar_ROS2_driver/lslidar_msgs/msg/: DetectedObject.msg  LslidarDifop.msg  LslidarPacket.msg  LslidarPoint.msg  LslidarScan.msg  LslidarSweep.msg
src/lidar_processing/: CMakeLists.txt  package.xml
src/lidar_processing/src/: lidar_processor.cpp
src/lslidar_driver/launch/: lsm10_uart_launch.py  lsm10p_uart_launch.py  lsn10_launch.py  lsn10p_launch.py
src/lslidar_driver/params/lidar_net_ros2/: lsm10_net.yaml  lsm10p_net.yaml
src/lslidar_driver/params/lidar_uart_ros2/: lsm10_p.yaml  lsn10p.yaml
src/lslidar_msgs/: CMakeLists.txt
src/lslidar_msgs/msg/: DetectedObject.msg  DetectedObjects.msg
src/n10p_lidar/: CMakeLists.txt  package.xml
src/n10p_lidar/launch/: lidar.launch.py
src/n10p_mapping/: CMakeLists.txt  package.xml
src/n10p_mapping/launch/: mapping.launch.py
src/pole_detection/: CMakeLists.txt  package.xml
src/pole_detection/action/: TrackPoles.action
src/pole_detection/config/: debug_params.yaml  debug_visualization.rviz  params.yaml  production_params.yaml
src/pole_detection/include/: clusterer.hpp  debug_publisher.hpp  geometric_pattern_matcher.hpp  pattern_matcher.hpp  pole_detection_node.hpp  pole_detection_node_old.hpp  preprocessor.hpp  tracker.hpp  types.hpp  validator.hpp
src/pole_detection/launch/: pole_detection.launch.py  pole_detection_debug.launch.py
src/pole_detection/msg/: DetectedObject.msg  DetectedObjects.msg
src/pole_detection/rviz/: debug.rviz
src/pole_detection/src/: action_server.cpp  clusterer.cpp  debug_publisher.cpp  geometric_pattern_matcher.cpp  pattern_matcher.cpp  pole_detection.cpp  pole_detection_node.cpp  pole_detection_unified.cpp  preprocessor.cpp  tracker.cpp  types.cpp  validator.cpp
src/rc2026_interfaces/: CMakeLists.txt  package.xml
src/rc2026_interfaces/action/: GripperControl.action  StairAlignment.action
src/rc2026_interfaces/msg/: KFSPose.msg
src/sim/: CMakeLists.txt  package.xml
src/sim/config/: ls_n10_p_2d.lua  rviz_config.rviz  slam_toolbox_params.yaml
src/sim/launch/: mapping.launch.py  navigation.launch.py  object_positioning.launch.py  pcl_detection.launch.py
src/sim/scripts/: positioning_client.py
src/sim/src/: lidar_app_node.cpp  lidar_diagnostic.cpp  lidar_pointcloud_processor.cpp  object_positioning_server.cpp
src/sim/urdf/: robot.urdf
test_simple/: CMakeLists.txt  package.xml
test_simple/msg/: Test.msg
