<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pole_detection</name>
  <version>1.0.0</version>
  <description>Simplified pole detection system for LiDAR-based pole identification</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_common</build_depend>
  <build_depend>pcl_io</build_depend>
  <build_depend>pcl_segmentation</build_depend>
  <build_depend>pcl_filters</build_depend>
  <build_depend>pcl_features</build_depend>
  <build_depend>pcl_kdtree</build_depend>
  
  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_common</exec_depend>
  <exec_depend>pcl_io</exec_depend>
  <exec_depend>pcl_segmentation</exec_depend>
  <exec_depend>pcl_filters</exec_depend>
  <exec_depend>pcl_features</exec_depend>
  <exec_depend>pcl_kdtree</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>